--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,7 @@
-max_tp_distance: 100
 page_qty: 8
 view_dist: 50
-page_location: []
-page_messages: []
+min_damage_dist: 15
+max_health: 100
+max_damage_percent: 30
+page_location: {}
+page_messages: {}
