--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
           <url>http://repo.bukkit.org/content/groups/public/</url>
         </repository>
     </repositories>
+    <build>
+		<plugins>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>2.3.1</version>
+			<configuration>
+				<outputDirectory>./server/plugins</outputDirectory>
+			</configuration>
+			</plugin>
+		</plugins>
+	</build>
     
     
     <dependencies>
