--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,9 @@
 page_qty: 8
-view_dist: 50
+view_dist: 30
 view_angle: 105
-min_damage_dist: 15
+min_damage_dist: 10
 max_health: 100
 max_damage_percent: 30
+slendermen_have_compass: true
 page_locations: []
 page_messages: []
