--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,7 @@
 name: Slender Multi Alpha
 main: org.chibitomo.slender.Slender
-version: 0.0.2
+version: 0.0.4
 commands:
-    set_child:
-       aliases: []
-    set_dead:
-       aliases: []
-       
     set_slenderman:
        description: Set the new Slenderman.
        usage: /set_slenderman <PLAYER_NAME>
@@ -30,4 +25,9 @@ commands:
     add_message:
        description: Add a new page message.
        usage: /add_message <YOUR_MESSAGE>
+       aliases: []
+       
+    test:
+       description: Just for testing.
+       usage: /test
        aliases: []
