--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>slendercraft</groupId>
   <artifactId>slendercraft</artifactId>
-  <version>0.0.2-alpha</version>
+  <version>0.1.0</version>
   
     <repositories>
         <!-- Bukkit can be found at the following repository -->
